fix: Prevent positions from clearing on auto-refresh
- Fixed type mismatch: updated TokenPosition interface to use balanceUSD and price as strings
- Converted all position.usdValue references to parseFloat(position.balanceUSD)
- Added background refresh flag to prevent loading state during auto-refresh
- Removed positionsData from useEffect dependencies to prevent unnecessary reloads
- Added hasInitiallyLoaded flag to only show skeleton on first load
- Positions now remain stable on screen during background updates

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,8 @@ AUDIT_READY_REPORT.md
 # Temporary assets
 Logo.jpg
 INVESTOR_ANALYSIS_HONEST.md
+~$vanguard_pitch_deck.md.docx
+.gitignore
+zkvanguard_pitch_deck.md.docx
+INVESTOR_PITCH_DECK_UPDATED.md
+zkvanguard_pitch_deck.md.pdf
