chore: switch to Bun for faster builds and installs
- Add bunfig.toml configuration
- Update package.json scripts to use Bun
- Keep Hardhat on Node.js for compatibility
- Add @types/minimatch for type definitions
- Bun 1.3.5 installed (93s install vs 150s+ npm)

--- a/package.json
+++ b/package.json
@@ -19,26 +19,26 @@
   },
   "engines": {
     "node": ">=18.0.0",
-    "npm": ">=9.0.0"
+    "bun": ">=1.0.0"
   },
   "scripts": {
     "prepare": "husky install",
     "clean": "rimraf dist coverage .hardhat cache",
     "compile": "hardhat compile",
-    "compile:circuits": "node scripts/utils/generate-circuits.ts",
-    "test": "cross-env ZK_PYTHON_ENABLED=true ZK_PYTHON_API_URL=http://127.0.0.1:8000 jest --verbose --logHeapUsage --detectOpenHandles",
-    "test:agents": "jest test/agents",
-    "test:integration": "jest test/integration",
+    "compile:circuits": "bun run scripts/utils/generate-circuits.ts",
+    "test": "cross-env ZK_PYTHON_ENABLED=true ZK_PYTHON_API_URL=http://127.0.0.1:8000 bun test --verbose",
+    "test:agents": "bun test test/agents",
+    "test:integration": "bun test test/integration",
     "test:contracts": "hardhat test",
-    "test:coverage": "jest --coverage",
-    "test:watch": "jest --watch",
-    "test:debug": "DEBUG=true jest --verbose",
-    "test:ci": "jest --ci --coverage --maxWorkers=2",
-    "test:sprint2": "node scripts/test-sprint2.js",
-    "lint": "npm run lint:contracts && npm run lint:ts",
+    "test:coverage": "bun test --coverage",
+    "test:watch": "bun test --watch",
+    "test:debug": "DEBUG=true bun test --verbose",
+    "test:ci": "bun test --coverage",
+    "test:sprint2": "bun run scripts/test-sprint2.js",
+    "lint": "bun run lint:contracts && bun run lint:ts",
     "lint:contracts": "solhint 'contracts/**/*.sol'",
     "lint:ts": "eslint . --ext .ts,.tsx",
-    "lint:fix": "npm run lint:contracts -- --fix && npm run lint:ts -- --fix",
+    "lint:fix": "bun run lint:contracts -- --fix && bun run lint:ts -- --fix",
     "format": "prettier --write '**/*.{ts,tsx,sol,json,md}'",
     "format:check": "prettier --check '**/*.{ts,tsx,sol,json,md}'",
     "typecheck": "tsc --noEmit",
@@ -46,22 +46,22 @@
     "deploy:mainnet": "hardhat run scripts/deploy/deploy-contracts.ts --network cronos-mainnet",
     "verify:testnet": "hardhat run scripts/deploy/verify-contracts.ts --network cronos-testnet",
     "verify:mainnet": "hardhat run scripts/deploy/verify-contracts.ts --network cronos-mainnet",
-    "agents:start": "node -r ts-node/register agents/core/LeadAgent.ts",
-    "agents:init": "node -r ts-node/register scripts/setup/setup-agents.ts",
-    "agents:dev": "nodemon --watch agents --exec node -r ts-node/register agents/core/LeadAgent.ts",
+    "agents:start": "bun run agents/core/LeadAgent.ts",
+    "agents:init": "bun run scripts/setup/setup-agents.ts",
+    "agents:dev": "bun --watch run agents/core/LeadAgent.ts",
     "dev:next": "next dev",
     "build:next": "next build",
     "start:next": "next start",
-    "frontend:dev": "npm run dev:next",
-    "frontend:build": "npm run build:next",
-    "frontend:preview": "npm run start:next",
+    "frontend:dev": "bun run dev:next",
+    "frontend:build": "bun run build:next",
+    "frontend:preview": "bun run start:next",
     "logs:agents": "tail -f logs/agents.log",
     "logs:contracts": "tail -f logs/contracts.log",
-    "fund:wallets": "node -r ts-node/register scripts/setup/fund-wallets.ts",
-    "dev": "npm run dev:next",
+    "fund:wallets": "bun run scripts/setup/fund-wallets.ts",
+    "dev": "bun run dev:next",
     "build": "next build",
-    "build:full": "npm run compile && npm run frontend:build",
-    "start": "npm run agents:start"
+    "build:full": "bun run compile && bun run frontend:build",
+    "start": "bun run agents:start"
   },
   "dependencies": {
     "@crypto.com/ai-agent-client": "^1.0.2",
@@ -110,6 +110,7 @@
     "@types/eventsource": "^3.0.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
+    "@types/minimatch": "^6.0.0",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
