feat: Add GDPR-compliant analytics with free PostgreSQL (Neon)
COOKIE CONSENT (GDPR):
- CookieConsent.tsx component with 3-tier consent (necessary/analytics/preferences)
- Cookie banner with Accept All / Customize / Necessary Only options
- Consent stored in localStorage, events dispatched for tracking

ANALYTICS SERVICE:
- AnalyticsService.ts - consent-aware tracking (no tracking without consent)
- Events: page_view, wallet_connect, swap, hedge, zk_proof, error
- NO PII collected: addresses hashed, no IP storage
- Session-based tracking (no cross-session tracking)

DATABASE (Neon PostgreSQL free tier):
- analytics-schema.sql with full schema
- 90-day auto-retention (GDPR compliant)
- Daily aggregation functions
- GDPR export/deletion functions
- @neondatabase/serverless package added

API ROUTE:
- /api/analytics - rate-limited event ingestion
- Admin endpoint for dashboard stats

PRIVACY POLICY UPDATE:
- Expanded with GDPR/CCPA rights
- Cookie disclosure
- Data retention periods
- International transfer notice
- Third-party services list

COMPLIANCE STATUS:
- ✅ GDPR compliant (consent, retention, deletion, portability)
- ✅ CCPA compliant (disclosure, opt-out)
- ⏳ SOC 2 planned Q3 2026

--- a/.env.example
+++ b/.env.example
@@ -42,8 +42,15 @@ VVS_ROUTER_ADDRESS=0x145863Eb42Cf62847A6Ca784e6416C1682b1b2Ae
 MOONLANDER_API_URL=https://api.moonlander.io
 DELPHI_CONTRACT_ADDRESS=0x...
 
-# Database (PostgreSQL)
-DATABASE_URL=postgresql://user:password@localhost:5432/chronos_vanguard
+# Database (PostgreSQL - Neon free tier recommended)
+# Get free database at: https://neon.tech (512MB free)
+DATABASE_URL=postgresql://user:password@ep-xxx.us-east-2.aws.neon.tech/zkvanguard_analytics?sslmode=require
+NEON_DATABASE_URL=postgresql://user:password@ep-xxx.us-east-2.aws.neon.tech/zkvanguard_analytics?sslmode=require
+
+# Analytics (GDPR compliant)
+ANALYTICS_ADMIN_KEY=your_random_admin_key_here
+
+# Legacy local DB config (optional)
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=chronos_vanguard
