chore: Add utilities and update documentation
- Add localStorage clear utility for debugging
- Add Moonlander quickstart documentation
- Update .env.example with DATABASE_URL

--- a/.env.example
+++ b/.env.example
@@ -60,7 +60,19 @@ MCP_API_KEY=your_mcp_api_key
 
 # dApp Integrations
 VVS_ROUTER_ADDRESS=0x145863Eb42Cf62847A6Ca784e6416C1682b1b2Ae
+
+# Moonlander Perpetuals (for hedging)
+# Get API keys from: https://moonlander.trade
+# Used by: HedgingAgent, /api/agents/hedging/execute
 MOONLANDER_API_URL=https://api.moonlander.io
+MOONLANDER_PRIVATE_KEY=your_moonlander_trading_wallet_private_key
+NEXT_PUBLIC_MOONLANDER_API=https://api.moonlander.io
+NEXT_PUBLIC_MOONLANDER_API_KEY=your_moonlander_api_key
+NEXT_PUBLIC_MOONLANDER_API_SECRET=your_moonlander_api_secret
+
+# Cronos Testnet RPC for Moonlander trading
+NEXT_PUBLIC_CRONOS_TESTNET_RPC=https://evm-t3.cronos.org
+
 DELPHI_CONTRACT_ADDRESS=0x...
 
 # Database (PostgreSQL - Neon free tier recommended)
