--- a/.gitignore
+++ b/.gitignore
@@ -279,3 +279,11 @@ Investors/8-Audio.m4a
 Investors/9-Audio.m4a
 Investors/10-Audio.m4a
 Investors/11-Audio.m4a
+# -------------------------------------------
+# Pricing Documents (Confidential)
+# -------------------------------------------
+docs/PRICING_MODEL.md
+docs/PRICING_SPREADSHEET.md
+docs/PRICING_REVENUE_MODEL.md
+docs/SALES_PIPELINE.md
+docs/SUI_BUILDER_REPORT_JAN2026.md
