--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,16 +30,16 @@ jobs:
         node-version: ${{ matrix.node-version }}
     
     - name: Install dependencies
-      run: bun install --frozen-lockfile
+      run: bun install
       
     - name: Run linter
-      run: npm run lint
+      run: bun run lint
       
     - name: Type check
-      run: npm run typecheck
+      run: bun run typecheck
       
     - name: Run tests
-      run: npm test
+      run: bun test
       env:
         CI: true
     
@@ -71,7 +71,7 @@ jobs:
         node-version: '20.x'
     
     - name: Install dependencies
-      run: bun install --frozen-lockfile
+      run: bun install
     
     - name: Build Next.js
       run: bun run build
