--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,9 +16,30 @@
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
-        "argsIgnorePattern": "^_"
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_",
+        "caughtErrorsIgnorePattern": "^_"
       }
     ],
-    "no-console": ["warn", { "allow": ["warn", "error", "info"] }]
-  }
+    "@typescript-eslint/no-var-requires": "warn",
+    "no-console": ["warn", { "allow": ["warn", "error", "info"] }],
+    "no-case-declarations": "warn",
+    "prefer-const": "warn",
+    "no-empty": "warn",
+    "no-async-promise-executor": "warn"
+  },
+  "overrides": [
+    {
+      "files": ["**/*.tsx"],
+      "rules": {
+        "no-useless-escape": "warn"
+      }
+    },
+    {
+      "files": ["scripts/**/*.ts", "test/**/*.ts"],
+      "rules": {
+        "no-console": "off"
+      }
+    }
+  ]
 }
