feat(zk): add CORS support for Vercel and update ZK API URL
- Add CORS origins for *.vercel.app and *.starknova.xyz
- Update .env.example with production ZK API URL (zk-api.starknova.xyz)

--- a/.env.example
+++ b/.env.example
@@ -111,6 +111,16 @@ AGENT_TIMEOUT=30000
 ZK_TRUSTED_SETUP_PATH=./zk/trusted-setup
 ZK_CIRCUIT_PATH=./zk/circuits
 
+# ZK-STARK API Configuration
+# Local development: http://localhost:8000
+# Production: https://zk-api.starknova.xyz (via Cloudflare Tunnel)
+ZK_API_URL=https://zk-api.starknova.xyz
+NEXT_PUBLIC_ZK_API_URL=https://zk-api.starknova.xyz
+ZK_PYTHON_TIMEOUT=120000
+
+# Set to 'true' to use mock proofs when ZK server is unavailable (for CI/testing)
+ZK_FALLBACK_TO_MOCK=false
+
 # Frontend
 VITE_API_URL=http://localhost:3000
 VITE_WS_URL=ws://localhost:3000
