--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -4,7 +4,7 @@
 # Supported funding platforms (uncomment to enable)
 
 # GitHub Sponsors
-# github: [mrarejimmyz]
+# github: [ZkVanguard]
 
 # Open Collective
 # open_collective: zkvanguard
