chore: add test script and update gitignore
- Add test-institutional-portfolio.ts for API testing
- Update .gitignore for test outputs

--- a/.gitignore
+++ b/.gitignore
@@ -327,3 +327,10 @@ mock-contracts-input.json
 HedgeExecutor_flat.sol
 hedge-executor-metadata.json
 hedge-executor-input.json
+docs/pitch-deck/slide-10-the-ask.md
+docs/pitch-deck/slide-09-team.md
+docs/pitch-deck/slide-08-competition.md
+docs/pitch-deck/slide-07-traction.md
+docs/pitch-deck/slide-06-business-model.md
+docs/pitch-deck/slide-05-market-opportunity.md
+docs/pitch-deck/glossary.md
